--- a/generic/dll/metasploit_dll_gdiplus/metasploit_dll_gdiplus.vcxproj.filters
+++ b/generic/dll/metasploit_dll_gdiplus/metasploit_dll_gdiplus.vcxproj.filters
@@ -15,18 +15,29 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
+    <ClInclude Include="framework.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="template.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="default_cpp_console_application.rc">
+    <ClCompile Include="template.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="metasploit_dll_gdiplus.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="template.def">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
